--- a/UsersServiceAndroid/app/src/main/AndroidManifest.xml
+++ b/UsersServiceAndroid/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="edu.upc.dsa.userserviceandroid">
+    package="edu.upc.dsa.firefighteradventure">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
@@ -13,9 +13,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".RegisterActivity"></activity>
-        <activity android:name=".LoginActivity" />
-        <activity android:name=".MainActivity">
+        <activity android:name="edu.upc.dsa.firefighteradventure.RegisterActivity"></activity>
+        <activity android:name="edu.upc.dsa.firefighteradventure.LoginActivity" />
+        <activity android:name="edu.upc.dsa.firefighteradventure.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
