--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Jan 07 00:54:01 CET 2021
-sdk.dir=C\:\\Users\\gerar\\AppData\\Local\\Android\\Sdk
+#Thu Jan 07 01:45:21 CET 2021
+sdk.dir=/Users/luisog30/Library/Android/sdk
